--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -28,6 +28,7 @@
 {% endfor %}
 
 <button type="submit" value="Submit">Submit</button>
+<input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 
 {% endblock %}
